# nie

./: Cargo.toml  README.md  default.nix  flake.nix  testrepos.txt
.forgejo/workflows/: nie.yaml
npins/: sources.json
src/: aliases.rs  attribute_path.rs  checkout.rs  discover.nix  error.rs  file.rs  interact.rs  interaction.rs  location.rs  main.rs  nix.rs  output.rs  pinning.rs  registry.rs
src/commands/: aliases.rs  auto_shell.rs  build.rs  check.rs  completions.rs  dev_shell.rs  develop.rs  evaluate.rs  init.rs  initialize.rs  man.rs  mod.rs  run.rs  shell.rs  show.rs
src/location/: attribute_path.rs  file_reference.rs  mod.rs  reference.rs  repo_location.rs  repo_reference.rs
src/nix/: compat.nix  discover.nix  discover_flake.nix  fetch_all.nix  fetch_codeberg.nix  fetch_forgejo.nix  fetch_git.nix  fetch_github.nix  fetch_tarball.nix  template-shell.nix
src/store/: checkout.rs  file.rs  mod.rs  output.rs
testfiles/: flake_update.txt  no_update.txt
