[package]
name = "nie-nix"
version = "0.1.1"
edition = "2024"
description = "Alternative Nix CLI to run and build remote derivations"
license = "MIT"
repository = "https://codeberg.org/jzbor/nie"
authors = [ "jzbor" ]

[[bin]]
name = "nie"
path = "src/main.rs"
doc = true

[dependencies]
clap = { version = "4.5.53", features = ["derive", "unstable-v5", "unstable-doc", "unstable-markdown" ] }
clap_complete = "4.5.62"
clap_mangen = "0.2.31"
colored = "3.0.0"
serde_json = "1.0.147"
thiserror = "2.0.17"
xdg = "3.0.0"

[profile.profiling]
inherits = "release"
debug = true
